<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_create">

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.davidgrajales.basededatos.ui.create.CreateFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/navigation_read"
        android:name="com.davidgrajales.basededatos.ui.dashboard.ReadFragment"
        android:label="@string/title_read"
        tools:layout="@layout/fragment_read" />

    <fragment
        android:id="@+id/navigation_actualizar"
        android:name="com.davidgrajales.basededatos.ui.actualizar.FragmentActualizar"
        android:label="@string/title_actualizar"
        tools:layout="@layout/fragment_actualizar" />
    <fragment
        android:id="@+id/deleteFragment"
        android:name="com.davidgrajales.basededatos.ui.delete.DeleteFragment"
        android:label="fragment_delete"
        tools:layout="@layout/fragment_delete" />
    <fragment
        android:id="@+id/fragmentList"
        android:name="com.davidgrajales.basededatos.ui.list.FragmentList"
        android:label="fragment_list"
        tools:layout="@layout/fragment_list" />
</navigation>